-Added walls -Multiple bugfixes

--- a/src/main/resources/assets/habirance/lang/en_us.json
+++ b/src/main/resources/assets/habirance/lang/en_us.json
@@ -2,13 +2,16 @@
   "block.habirance.alabaster_block": "Alabaster",
   "block.habirance.alabaster_stairs": "Alabaster Stairs",
   "block.habirance.alabaster_slab": "Alabaster Slab",
+  "block.habirance.alabaster_wall": "Alabaster Wall",
   "block.habirance.polished_alabaster_block": "Polished Alabaster",
   "block.habirance.polished_alabaster_stairs": "Polished Alabaster Stairs",
   "block.habirance.polished_alabaster_slab": "Polished Alabaster Slab",
   "block.habirance.redrock_block": "Redrock",
+  "block.habirance.redrock_wall": "Redrock Wall",
   "block.habirance.redrock_stairs": "Redrock Stairs",
   "block.habirance.redrock_slab": "Redrock Slab",
   "block.habirance.redrock_bricks": "Redrock Bricks",
+  "block.habirance.redrock_brick_wall": "Redrock Brick Wall",
   "block.habirance.redrock_brick_stairs": "Redrock Brick Stairs",
   "block.habirance.redrock_brick_slab": "Redrock Brick Slab",
   "block.habirance.chiseled_redrock_block": "Chiseled Redrock",
